--- a/Fallmen/.gitignore
+++ b/Fallmen/.gitignore
@@ -10,6 +10,7 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 /[Aa]ssets/MyProject/Fonts/
+/[Aa]ssets/MyProject/HUDTest/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
