--- a/Fallmen/.gitignore
+++ b/Fallmen/.gitignore
@@ -12,6 +12,8 @@
 /[Aa]ssets/MyProject/Fonts/
 /[Aa]ssets/MyProject/HUDTest/
 /[Aa]ssets/MyProject/StagePrefab/
+/[Aa]ssets/MyProject/
+
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
